fix(go.mod): upgrade golang version to 1.24 and crypto to 0.35.0 (#2344)
Ref: SRX-78E6I3

Fixes `CVE-2025-22869`

--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -1,9 +1,17 @@
-FROM golang:1.21.4-alpine3.17 as golang
-FROM docker:23.0.6-cli-alpine3.17
+FROM golang:1.24.2-alpine3.21 as golang
+FROM docker:28.0.2-cli-alpine3.21
 
 COPY --from=golang /usr/local/go/ /usr/local/go/
 ENV PATH /usr/local/go/bin:$PATH
-RUN apk add --no-cache libgit2 libgit2-dev go protoc make pkgconfig build-base git tar npm sqlite sqlite-dev bash
+RUN apk add --no-cache go protoc make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+RUN git clone https://github.com/libgit2/libgit2.git && \
+    cd libgit2 && \
+    git checkout v1.5.0 && \
+    mkdir build && cd build && \
+    cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DBUILD_SHARED_LIBS=ON -DUSE_SSH=ON && \
+    cmake --build . --target install && \
+    cd ../.. && rm -rf libgit2
+
 RUN npm install -g pnpm@8.5.1
 RUN wget https://github.com/bufbuild/buf/releases/download/v1.23.1/buf-Linux-x86_64 -O /usr/local/bin/buf && chmod +x /usr/local/bin/buf
 RUN echo 'b1f3484cfc092bc14e1f886ff2116a98562bf29df0be2130bbaac128eca0b628  /usr/local/bin/buf' | sha256sum -c
