--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -15,11 +15,18 @@ COPY go.sum go.mod /kp/
 RUN make -C /kp/pkg proto
 RUN go build -o /kp/main /kp/services/manifest-repo-export-service/cmd/server/
 
-FROM alpine:3.18
+FROM alpine:3.21
 ARG UID=1000
 ARG DIR
 LABEL org.opencontainers.image.source https://github.com/freiheit-com/kuberpult
-RUN apk --update add ca-certificates tzdata libgit2 git sqlite-libs
+RUN apk --update add ca-certificates tzdata git sqlite-libs cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl make libssh2-dev
+RUN git clone https://github.com/libgit2/libgit2.git && \
+    cd libgit2 && \
+    git checkout v1.5.0 && \
+    mkdir build && cd build && \
+    cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DBUILD_SHARED_LIBS=ON -DUSE_SSH=ON && \
+    cmake --build . --target install && \
+    cd ../.. && rm -rf libgit2
 RUN adduser --disabled-password --gecos "" --home "/kp" --uid ${UID} kp
 RUN chown -R kp:kp /kp
 ENV TZ=Europe/Berlin
